middleware-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-redirect-to-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
